# my_nn

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  layer.cpp  layer.h  main.cpp  model.cpp  model.h
tests/: CMakeLists.txt  test_layer.cpp  test_model.cpp
